--- a/stylesBurg.css
+++ b/stylesBurg.css
@@ -1,10 +1,11 @@
 * {
-    background-color: purple;
+    background-color: blue;
     color: gold;
 }
 
 p {
     margin-right: 40%;
+    color: white;
 }
 
 ul {
